fix missing link

--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -100,7 +100,7 @@
    "id": "16827b78-d5b4-4037-b89b-fa2ed13f0968",
    "metadata": {},
    "source": [
-    "❓ Navigate to [Kaggle page]() for this dataset. Find descriptions for the `Glucose` and `BMI` columns. Add these descriptions to the [Markdown table](https://www.markdownguide.org/extended-syntax/#tables) below."
+    "❓ Navigate to [Kaggle page](https://www.kaggle.com/datasets/mathchi/diabetes-data-set) for this dataset. Find descriptions for the `Glucose` and `BMI` columns. Add these descriptions to the [Markdown table](https://www.markdownguide.org/extended-syntax/#tables) below."
    ]
   },
   {
