--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -239,7 +239,7 @@
    "id": "9a1aa2d0-b6b4-42ad-8ac5-17c90e4bb216",
    "metadata": {},
    "source": [
-    "Using `augment` with your fitted model and the `diabetes_test` data as arguments, create a new dataset called `diabeted_test_wPred` that is the `diabetes_test` table including predictions from your model. "
+    "Using `augment` with your fitted model and the `diabetes_test` data as arguments, create a new dataset called `diabetes_test_wPred` that is the `diabetes_test` table including predictions from your model. "
    ]
   },
   {
